tests/functional/lang/eval-fail/duplicate-traces.err.exp
error:
       … from call site
         at /pwd/lang/eval-fail/duplicate-traces.nix:6:1:
            5| in
            6| throwAfter 2
             | ^
            7|

       … while calling 'throwAfter'
         at /pwd/lang/eval-fail/duplicate-traces.nix:4:16:
            3| let
            4|   throwAfter = n: if n > 0 then throwAfter (n - 1) else throw "Uh oh!";
             |                ^
            5| in

       … from call site
         at /pwd/lang/eval-fail/duplicate-traces.nix:4:33:
            3| let
            4|   throwAfter = n: if n > 0 then throwAfter (n - 1) else throw "Uh oh!";
             |                                 ^
            5| in

       … while calling 'throwAfter'
         at /pwd/lang/eval-fail/duplicate-traces.nix:4:16:
            3| let
            4|   throwAfter = n: if n > 0 then throwAfter (n - 1) else throw "Uh oh!";
             |                ^
            5| in

       … from call site
         at /pwd/lang/eval-fail/duplicate-traces.nix:4:33:
            3| let
            4|   throwAfter = n: if n > 0 then throwAfter (n - 1) else throw "Uh oh!";
             |                                 ^
            5| in

       … while calling 'throwAfter'
         at /pwd/lang/eval-fail/duplicate-traces.nix:4:16:
            3| let
            4|   throwAfter = n: if n > 0 then throwAfter (n - 1) else throw "Uh oh!";
             |                ^
            5| in

       … while calling the 'throw' builtin
         at /pwd/lang/eval-fail/duplicate-traces.nix:4:57:
            3| let
            4|   throwAfter = n: if n > 0 then throwAfter (n - 1) else throw "Uh oh!";
             |                                                         ^
            5| in

       error: Uh oh!
